done . sadece db kaldı

--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,30 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
+    <!-- Angular -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
+
+    <!-- Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/3.6.6/firebase.js"></script>
+
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
+
+
+    <script src="https://www.gstatic.com/firebasejs/4.3.1/firebase.js"></script>
+   
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyDy_c3LAlD1mITMSL-qyq_OsBQTyZ-_b14",
+        authDomain: "album-facere.firebaseapp.com",
+        databaseURL: "https://album-facere.firebaseio.com",
+        projectId: "album-facere",
+        storageBucket: "album-facere.appspot.com",
+        messagingSenderId: "639148637695"
+      };
+      firebase.initializeApp(config);
+    </script>
 
   </head>
 
